# claude-finance

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml  requirements.txt
.claude/commands/: demo.md  walkthrough-accounting.md  walkthrough-equity-research.md  walkthrough-investment-banking.md  walkthrough-private-equity.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: GETTING_STARTED.md  cross-asset.html  data-layer.html  features.html  fundamentals.html  getting-started.html  index.html  markets.html  multi-agent.html  options.html  personas.html  portfolio.html  quant-ml.html  style.css  walkthroughs.html
docs/app/: app.js  index.html
docs/social/: og-card.html
finance-mcp-plugin/: .mcp.json
finance-mcp-plugin/.claude-plugin/: plugin.json
finance-mcp-plugin/commands/: finance-analyst.md  finance-pm.md  finance.md
finance_output/: last_run.py
tests/: conftest.py  test_demo_command.py  test_demo_personas.py  test_dx_memo.py  test_http_server.py  test_integration.py  test_market_demo.py  test_market_tools.py  test_mcp_server.py  test_ml_demo_steps.py  test_ml_tools.py  test_output_dir.py  test_output_format.py  test_persona_commands.py  test_plugin_manifest.py  test_sample_csv.py  test_walkthrough_accounting.py  test_walkthrough_equity_research.py  test_walkthrough_fpa.py  test_walkthrough_hedge_fund.py  test_walkthrough_investment_banking.py  test_walkthrough_private_equity.py  test_yfinance_adapter.py
(+156 files in other folders)
