[project]
name = "finance-mcp"
version = "0.1.0"
description = "Finance AI skill MCP server for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[project.scripts]
finance-mcp-http = "finance_mcp.server_http:start"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
markers = [
    "network: marks tests that require live network access (Yahoo Finance, etc.)",
]
